--- a/task2/package.json
+++ b/task2/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/testCases.js"
+    "test": "mocha test/testCases.js"
   },
   "author": "",
   "keywords": [],
